examples/test/testpolicy7392.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7392
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key30: value32
      key22: value21
      key19: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value45
          key11: value9
          key44: value27
      podSelector:
        matchLabels:
          key10: value23
          key40: value44
          key39: value29
